updated client CRUD